# SYF-Shield

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
docs/: ARCHITECTURE.md  INTEGRATION.md
pom/rust/src/: action.rs  effect.rs  shield.rs  types.rs
pom/rust/tests/: compile_fail.rs  runtime.rs
pom/rust/tests/ui/: sealed_cannot_engage.stderr
specs/: SYF_SHIELD.md  SYF_SHIELD_ENGAGEMENT.md  SYF_SHIELD_INVARIANTS.md  SYF_SHIELD_LEXICON.md  SYF_SHIELD_TOPOLOGY.md
src/: ep.rs  ep_anchor.rs  gate.rs  lib.rs
tests/ui/: sealed_cannot_engage.rs
