[package]
name = "syf_shield_pom"
version = "0.1.0"
edition = "2021"
description = "Minimal PoM for SYF-Shield Engagement Point (Phase 4.4 canon v0.2)"
license = "Apache-2.0"

[features]
test-support = []

[lib]
crate-type = ["rlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]

[dev-dependencies]
trybuild = "=1.0.99"
syf_shield_pom = { path = ".", features = ["test-support"] }
